Update lab name in About section of index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="inner">
         <section id="about">
           <h2>About</h2>
-          <p>I am a Ph.D. candidate in Computer Science at Tufts University, advised by Dr.Elaine Short in <a href="https://aabl.cs.tufts.edu/" target="_blank" rel="noopener">Accessible and Applied Robotics Lab (AABL)</a>. I work on improving robot learning from multi-modular human teaching, including human feedback, human demonstrations, and outputs from VLM/LLM. Most of my data is open-sourced and collected from public spaces with real-world non-expert users.</p>
+          <p>I am a Ph.D. candidate in Computer Science at Tufts University, advised by Dr.Elaine Short in <a href="https://aabl.cs.tufts.edu/" target="_blank" rel="noopener">Assistive Agent and Behavior Learning lab (AABL)</a>. I work on improving robot learning from multi-modular human teaching, including human feedback, human demonstrations, and outputs from VLM/LLM. Most of my data is open-sourced and collected from public spaces with real-world non-expert users.</p>
           <div class="callout muted">Actively open to research collaborations in HRI, RLHF for robots, and human data collection methodology.</div>
         </section>
 
