Update CV link to point to PDF file

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <a class="pill" href="https://scholar.google.com/citations?user=j0qxKQIAAAAJ&hl=en&oi=ao" target="_blank" rel="noopener">Google Scholar</a>
           <a class="pill" href="https://github.com/HangYu8123" target="_blank" rel="noopener">GitHub</a>
           <a class="pill" href="https://www.linkedin.com/in/hang-yu-0343b2273/" target="_blank" rel="noopener">LinkedIn</a>
-          <a class="pill" href="#">CV (PDF)</a>
+          <a class="pill" href="assets/cv.pdf" target="_blank" rel="noopener" type="application/pdf">CV (PDF)</a>
         </div>
 
         <section style="margin-top:18px">
