--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     nav { display: flex; flex-wrap: wrap; gap: 10px; }
     nav a { padding: 8px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fff; }
 
-    main { max-width: var(--maxw); margin: 28px auto; padding: 0 20px 60px; display: grid; grid-template-columns: 1fr; grid-template-areas: "content"; gap: 26px; }
+    main { max-width: var(--maxw); margin: 28px auto; padding: 0 20px 28px; display: grid; grid-template-columns: 1fr; grid-template-areas: "content"; gap: 26px; }
     @media (min-width: 960px){ main { grid-template-columns: 380px 1fr; grid-template-areas: "aside content"; align-items: start; } }
 
     .panel { background: var(--panel); border: 1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow); }
@@ -178,7 +178,6 @@
         grid-column: 2; /* Middle column */
         grid-row: 1 / span 2; /* Span both rows */
       }
-      /* Ensure images fill their specific slots */
       .pg-img1 { grid-column: 1; grid-row: 1; }
       .pg-img2 { grid-column: 3; grid-row: 1; }
       .pg-img3 { grid-column: 1; grid-row: 2; }
@@ -492,33 +491,6 @@
           </div>
         </section>
 
-        <section id="personal" style="margin-top:20px">
-          <h2>Outside Research</h2>
-          <div class="personal-grid">
-            <div class="pg-item pg-img1">
-              <img src="assets/img/life/img1.jpg" alt="Outside research photo 1" loading="lazy">
-            </div>
-            
-            <div class="pg-item pg-video">
-              <video controls muted loop playsinline>
-                <source src="assets/img/life/video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
-            </div>
-
-            <div class="pg-item pg-img2">
-              <img src="assets/img/life/img2.jpg" alt="Outside research photo 2" loading="lazy">
-            </div>
-
-            <div class="pg-item pg-img3">
-              <img src="assets/img/life/img3.jpg" alt="Outside research photo 3" loading="lazy">
-            </div>
-
-            <div class="pg-item pg-img4">
-              <img src="assets/img/life/img4.jpg" alt="Outside research photo 4" loading="lazy">
-            </div>
-          </div>
-        </section>
         <section id="contact" style="margin-top:20px">
           <h2>Contact</h2>
           <p>Email: <a href="mailto:hyu08@tufts.edu">hyu08@tufts.edu</a></p>
@@ -527,6 +499,38 @@
       </div>
     </div>
   </main>
+  
+  <div class="wrap">
+    <section id="personal" class="panel">
+      <div class="inner">
+        <h2 style="border-bottom: 1px solid var(--border); padding-bottom: 14px; margin-bottom: 20px;">Outside Research</h2>
+        <div class="personal-grid">
+          <div class="pg-item pg-img1">
+            <img src="assets/img/life/img1.jpg" alt="Outside research photo 1" loading="lazy">
+          </div>
+          
+          <div class="pg-item pg-video">
+            <video controls muted loop playsinline>
+              <source src="assets/img/life/video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+
+          <div class="pg-item pg-img2">
+            <img src="assets/img/life/img2.jpg" alt="Outside research photo 2" loading="lazy">
+          </div>
+
+          <div class="pg-item pg-img3">
+            <img src="assets/img/life/img3.jpg" alt="Outside research photo 3" loading="lazy">
+          </div>
+
+          <div class="pg-item pg-img4">
+            <img src="assets/img/life/img4.jpg" alt="Outside research photo 4" loading="lazy">
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
   <footer class="footer">
     <div class="wrap">
