--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-               <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Diagram illustrating Top-K Interesting Preference Rules Mining Based on MaxClique" loading="lazy">
+               <img class="thumb" src="assets/img/papers/top-k.jpg" alt="Diagram illustrating Top-K Interesting Preference Rules Mining Based on MaxClique" loading="lazy">
                 <div>
                   <h3>Top-K Interesting Preference Rules Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing-lei Liu, <strong>Hang Yu</strong>, Wei Wei. <em>Expert Systems with Applications</em> 143 (2020) 113043.</div>
@@ -401,7 +401,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-               <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Framework for Contextual Preference Collaborative Measure Based on Belief System" loading="lazy">
+               <img class="thumb" src="assets/img/papers/belief.jpg" alt="Framework for Contextual Preference Collaborative Measure Based on Belief System" loading="lazy">
                 <div>
                   <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing-lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
@@ -411,7 +411,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="MaxClique based Conditional Preference Mining diagram" loading="lazy">
+                <img class="thumb" src="assets/img/papers/maxclique.jpg" alt="MaxClique based Conditional Preference Mining diagram" loading="lazy">
                 <div>
                   <h3>Conditional Preference Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing-lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
