Remove commented education section from index.html
Removed commented-out education section from HTML.

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           </div>
         </section>
 
-<section id="education" style="margin-top:20px">
+<!-- <section id="education" style="margin-top:20px">
           <h2>Education</h2>
           <div class="items">
             
@@ -514,7 +514,7 @@
               </ul>
             </div>
 
-          </div>
+          </div> -->
         </section><section id="education" style="margin-top:20px">
           <h2>Education</h2>
           <div class="items">
