--- a/index.html
+++ b/index.html
@@ -251,7 +251,13 @@
     <aside class="panel">
       <div class="inner">
         <div class="hero">
-          <h1>Hang Yu (余航)</h1>
+
+          <h1>
+          Hang Yu (余航)
+          <span style="display:block; font-size:0.6em; font-weight:400; color:var(--muted); margin-top:6px; line-height:1.3;">
+            Tufts University Robot Learning RLHF Reinforcement Learning LfD GenAI
+          </span>
+        </h1>
           <p>Ph.D. Candidate, <strong>Tufts University</strong>. My research focuses on <em>Human–Robot Interaction</em> (HRI), <em>human-in-the-loop learning</em>, <em>RLHF</em>, and <em>Imitation Learning</em>.</p>
         </div>
 
