Update footer content in index.html
Removed theme attribution from footer.

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
   <footer class="footer">
     <div class="wrap">
-      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS. Theme inspired by <a href="https://haoruxue.github.io/" target="_blank" rel="noopener">Haoru Xue</a>.
+      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS.
     </div>
   </footer>
 
